# GPU-VIRTUAL-PROYECT-

./: settings.gradle
.github/workflows/: build.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml
